--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-
+/*top-players style*/
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins:wght@500&display=swap');
 
 
@@ -23,15 +23,19 @@ body{
 }
 main{
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
 }
 hr{
     border: 1px solid #D1D1D1;
+    margin-bottom: 27px;
 }
 .container{
     background-color:  #FFFFFF;
     width: 870px;
     padding: 30px;
+    margin-top: 21px;
 }
 
 .player{
@@ -47,4 +51,59 @@ hr{
 .player-name{
     margin-left:16px;
     font-size: 18px;
+}
+/*top-blogs style*/
+.blogs{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-row-gap: 26px;
+}
+.blog{
+    display: flex;
+}
+.blog img{
+    width: 177px;
+    height: 117px;
+
+}
+.blog-info{
+    margin-left: 16px;
+
+}
+.blog-title{
+    font-size: 20px;
+}
+.blog-author{
+    color: #9F9F9F;
+    font-size: 16px;
+
+}
+.blog-author a{
+    text-decoration: none;
+    font-size: 16px;
+    color: #562EFF;
+}
+
+/*course style*/
+.courses{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-column-gap: 24px;
+}
+
+
+.course .course-banner  img{
+    width: 224px;
+    height: 104px;
+}
+.course-info{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.fa-star.filled {
+    color: #FFC014;
+}
+.fa-star.empty{
+    color: #AEAEAE;
 }
