--- a/styles/style.css
+++ b/styles/style.css
@@ -107,3 +107,31 @@ hr{
 .fa-star.empty{
     color: #AEAEAE;
 }
+
+/*---------------------------Media queries mobile devices------------------------*/
+
+@media only screen and (max-width:688px) {
+    .container{
+        width: 100%;
+    }
+    .players,.blogs,.courses{
+        grid-template-columns: repeat(1,1fr);
+
+    }
+    .player, .blog{
+        flex-direction: column;
+    }
+    
+}
+
+
+/*---------------------------Media queries ipad devices------------------------*/
+@media only screen and  (min-width:689px)and (max-width:991px){
+    .container{
+        width: 100%;
+    }
+    .players{
+        grid-template-columns: repeat(2,1fr);
+    }
+    
+}
